# mutree

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
benches/: bench_forestry.rs  bench_trie.rs
reference/: MPF.md  technical-writing-style-instructions.md
src/: error.rs  hash.rs  lib.rs  testing.rs
src/forestry/: mod.rs  neighbor.rs  proof.rs  step.rs
src/mutree/: mod.rs
src/trie/: mod.rs  neighbor.rs  proof.rs  step.rs
tests/: aiken_compat.rs
