[package]
name = "mutree"
description = "A throrougly tested Sparse Merkle Tree Data Structure"
authors = ["Cainã Costa <me@cfcosta.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
digest = "0.10.7"
hex = { version = "0.4.3", features = ["serde"] }
paste = "1.0.15"
proptest = "1.4.0"
test-strategy = "0.4.0"
thiserror = "1.0.61"

# Hash Functions
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.5.4", features = [
  "serde",
  "traits-preview",
], optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }

[features]
default = []
all_hashes = ["blake2", "blake3", "sha2", "sha3"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]

[dev-dependencies]
blake2 = "0.10.6"
criterion = { version = "0.5.1", features = ["real_blackbox"] }
criterion-cycles-per-byte = "0.6.1"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }

[[bench]]
name = "trie"
path = "benches/bench_trie.rs"
harness = false
